# openai-realtime-base-app

./: LICENSE  README.md  config.py  main.py  pyproject.toml
assistant/: audio_handler.py  gui.py  realtime_assistant.py
assistant/functions/: analyze_screenshot.py
utils/: websocket_client.py
